--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext.daggerVersion = '2.25.2'
+    ext.lifecycleVersion = '2.2.0-rc01'
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
